crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__tests__can_unify_arrays.snap
---
source: crates/azalea-core/src/typeck/tests.rs
expression: output
---
TYPE1:
[ᵗa]

TYPE2:
[Int]

RESULT:
Ok(
    {
        "a": Int,
    },
)
