crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__tests__can_unify_records.snap
---
source: crates/azalea-core/src/typeck/tests.rs
expression: output
---
TYPE1:
Record(
    Record {
        name: "a",
        fields: [],
    },
)

TYPE2:
Record(
    Record {
        name: "b",
        fields: [],
    },
)

RESULT:
Ok(
    {},
)
