crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__tests__can_unify_valid_type_ctor.snap
---
source: crates/azalea-core/src/typeck/tests.rs
expression: output
---
TYPE1:
List[ᵗa]

TYPE2:
List[Int]

RESULT:
Ok(
    {},
)
