crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__tests__does_type_occur_in_var.snap
---
source: crates/azalea-core/src/typeck/tests.rs
expression: output
---
VAR: a

TYPE:
ᵗa

RESULT:
true
